# Piston

./: .gitignore  CHANNEL_CONFIG_MIGRATION.md  CHANNEL_UI_CHANGES.md  CLEANUP_SUMMARY.md  COMPLETE_CLEANUP_REPORT.md  LICENSE  MANIFEST.in  PRIORITY2_REFACTORING.md  Piston.py  Piston.pyproj  Piston.sln  README.md  TESTING_CHECKLIST.md  UPDATE_SYSTEM_GUIDE.md  build_unix.sh  build_windows.ps1  debug_out.txt  final_distribution_check.py  piston.spec  plan.json  profile_performance.py  profile_results.txt  pyproject.toml  requirements.txt  setup.cfg  test_channel_migration.py  trace_dedicated.json  trace_events_1.json  trace_strong.json  trace_trace.json  trace_weak.json
Default Plan Schema/: planning_template_from_plan_v3.xlsx
Python piston_core/: scheduler.py
debug/: analyze_trace.py  apply_dedicated_and_trace.py  check_fully_dedicated.py  check_stations.py  clear_icon_cache.bat  create_plan_from_model.py  create_simple_icon.py  debug_dedicated.py  debug_sched.py  debug_smart_mode.py  diag_tests_zero_and_mapping.py  diagnose_gui_issue.py  inspect_marker.py  run_sched_summary.py  test_alternate_spins.py  test_capacity_estimator_fix.py  test_channel_exclusion.py  test_ff_scenario.py  test_final_verification.py  test_gui_cleanup.py  test_hidden_stations.py  test_integration_hidden_stations.py  test_option_a.py  test_parallel_fix.py  test_plan_mapping_filters_hidden.py  test_realistic_parallel.py  test_selective_yield.py  test_smart_parallel.py  test_validation_filters_hidden.py  test_yield_bug.py  test_yield_models.py  verify_build_version.py  verify_no_console.py
(+97 files in other folders)
